FLOE-365: Spacing fix

--- a/demos/voting/css/style.css
+++ b/demos/voting/css/style.css
@@ -1,5 +1,5 @@
 .gpii-fd-main {
-  height: 32rem;
+  height: 33rem;
 }
 
 /* show the selfVoicing toggle on the last panel since it's no longer the congratulations page */
